# hyperreals

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
.trunk/: trunk.yaml
paper/: Makefile  metrics.tex  paper.tex  references.bib
scripts/: demo.py  eval.py  taylor.py  transitivity-smoke-test.py
src/hyperreal/: __init__.py  asymptotic.py  asymptotic_facts.py  dual.py  hyperreal.py  sat.py  series.py  ultrafilter.py
src/hyperreal/sequence/: __init__.py  base.py  functions.py  operations.py  primitives.py
src/hyperreals/: __init__.py  algebra.py  dominance.py  dual.py  sat.py
src/hyperreals/sequence/: operations.py
tests/: test_asymptotic_facts.py  test_choose_standard_part.py  test_standard_part_extended.py  test_tier3_dominance.py  test_transitivity.py  test_ultrafilter_tier2_lt.py
