[project]
name = "hyperreals"
version = "0.1.0"
description = "Hyperreal arithmetic with SAT-backed lazy ultrafilters for non-standard analysis and automatic differentiation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/krzysztofwos/hyperreals"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[dependency-groups]
dev = ["mypy>=1.19.1", "pytest>=9.0.2", "ruff>=0.14.9"]
